<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/label_network_type_required"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <RadioGroup
        android:id="@+id/radio_group_network_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_no_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_none" />

        <RadioButton
            android:id="@+id/radio_any_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_any" />

        <RadioButton
            android:id="@+id/radio_wifi_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_wifi" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/label_requires"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch_idle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_device_idle" />

        <Switch
            android:id="@+id/switch_charging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_device_charging" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_seek_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_override_deadline"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <TextView
            android:id="@+id/progress_seek_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_not_set"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:onClick="scheduleJob"
        android:text="@string/button_schedule_job" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:onClick="cancelJobs"
        android:text="@string/button_cancel_jobs" />

</LinearLayout>